@@ -9,8 +9,11 @@ update profiles set saturation=1;
 update profiles set contrast=0;
 update profiles set brightness=0;
 update profiles set background=0;
+update profiles set savitzky_golay_size=0;
+update profiles set savitzky_golay_amount=100;
+update profiles set savitzky_golay_iterations=1;
 select * from profiles;
-update settings set latest_known_version='2.2.3';
+update settings set latest_known_version='2.3.0';
 update settings set latest_known_version_checked=null;
 update settings set root_folder='C:/';
 select * from settings;
