@@ -196,3 +196,7 @@
 .savgoySizeButton {
   margin-right: 24px;
 }
+
+.radioMargin {
+  margin-left: 141px;
+}
