@@ -79,10 +79,6 @@ select:hover {
   width: 428px;
 }
 
-.mat-radio-group {
-  width: 428px;
-}
-
 .card {
   max-width: 616px;
   margin-top: 8px;
