@@ -1,5 +1,9 @@
 LuckyStackWorker - RELEASE NOTES
 ================================
+28/12/2022 revision release 2.3.0:
+- Added new Savitzky-Golay denoising filter controls
+- Added an installer
+
 30/10/2022 revision release 2.2.3:
 - Fixed bug in load profile not switching to the profile in the yaml file being loaded.
 
